# AIProject

./: CMakeLists.txt  main.cpp  parserimpl.cpp  parserimpl.h  parserservice.cpp  parserservice.h  serverthread.cpp  serverthread.h
model/: AImodule.py
model/output/checkpoint-50000/: config.json  rng_state.pth  scheduler.pt  trainer_state.json
model/timeparser/: time_extractor.py
proto/: parser.proto
